# bevy-snake2d

./: .gitignore  Cargo.toml  README.md
assets/maps/: closed_10x10.json
src/: animation.rs  apple.rs  assets.rs  board.rs  main.old.rs  main.rs  physics.rs  run_criterias.rs  snake.rs  state.rs  states.rs  timer.rs
src/game/: apple.rs  bush.rs  collision.rs  input_controller.rs  mod.rs  snake.rs  tile_map.rs  value_tracker.rs  wind.rs
src/game/components/: direction.rs  lifetime.rs  mod.rs  number_generator.rs  position.rs  rigid_body.rs
src/game/queries/: mod.rs  spatial.rs
src/scenes/: game.rs  main_menu.rs  mod.rs  splash.rs
src/screens/: in_game.rs  main_menu.rs  mod.rs  splash.rs
src/systems/: despawn.rs  mod.rs  timer.rs
src/ui/: button.rs  mod.rs
src/world/: apple.rs  board.rs  mod.rs  snake.rs  tile_map.rs
