[package]
name = "bevy-snake2d"
version = "0.1.0"
edition = "2021"
authors = ["Alexis Le Provost <alexis.leprovost@outlook.com>"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
debug = ["bevy-inspector-egui", "iyes_loopless/bevy-inspector-egui"]

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = { version = "0.13.0", optional = true }
itertools = "0.10.5"
rand = "0.8.5"
iyes_loopless = "0.7.1"
