[package]
name = "bevy-snake2d"
version = "0.1.0"
edition = "2021"
authors = ["Alexis Le Provost <alexis.leprovost@outlook.com>"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
debug = ["bevy-inspector-egui", "iyes_loopless/bevy-inspector-egui"]
print-schedule = ["bevy_mod_debugdump"]

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = { version = "0.13.0", optional = true }
bevy_tweening = "0.5.0"
leafwing-input-manager = { version = "0.6.1", default-features = false }
iyes_loopless = { version = "0.8.0", default-features = false, features = ["states", "app"] }

itertools = "0.10.5"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

derive_more = { version = "0.99.17", default-features = false, features = ["display", "deref", "deref_mut"] }


bevy_mod_debugdump = { version = "0.5.0", optional = true }
cfg-if = "1.0.0"
